# madronalib-mlvg-clap-saw-demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MIGRATION_PLAN.md  README.md
scripts/: debug-plugin.sh  test-plugin.bat  test-plugin.sh
src/: clap-saw-demo-gui.cpp  clap-saw-demo-gui.h
tools/: README.md
